Tue Aug 26 08:57:54 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.[hc]*: fixed buglet.

	* bse-module-generator.[hc]*: new parser/code-generator front-end
	that just uses the Module code generator and parses .mdef files
	(module definition files).

	* sfidl-generator.[hc]*: renamed from sfild.* (per cvs-copy).
	stripped to contain only code-generator code.
	
	* sfidl.h: removed.
	* sfidl.cc: stripped to contain only main().
	
Mon Aug 25 19:34:05 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: generate only a single object header file
	from .mdef (module definition file) files.
	based on the export macros from bsecxxplugin.h, the generated header
	contains a complete class implementation as requested in the .mdef
	file, except for the actual *Module object. users need to only
	implement the *Module object and add two export macros to their
	*.cc file.
	generate inlined icon pixstreams via gdk-pixbuf-csource for
	Info icon="file.png"; statements.

	* sfidl*.[hc]*: got rid of a couple "const" qualifiers in order
	to be able to use map<string,string> infos; as non-const.

Fri Aug 22 19:47:55 2003  Tim Janik  <timj@gtk.org>

	* sfidl-parser.cc (parseChoiceValue): applied patch from stefan which
	allowes choice values as number (or Neutral), string, or a pair of both.

Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>

	* testidl.idl:
	* Makefile.am: renamed *.sfidl to *.idl.

Fri Aug 22 07:48:14 2003  Tim Janik  <timj@gtk.org>

	* sfidl-parser.cc: move everything into an anonymous namespace to
	avoid unwanted symbol exports.
	declare extra tokens as enum values, move token strings next to
	the enum definition as ordering is important here.
	provide operator== for enum comparisons.
	make the @ in '@=' statements in idl files optional.
	prototyped $GROUP=""; syntax for property group assignments,
	this code is disabled however because the syntax looks somewhat
	odd. removed code for oddball 'group: "Foo";' statements which