@@ -90,9 +90,9 @@ noinst_PROGRAMS = sfidl testsfi
 sfidl_SOURCES = sfidl.cc $(common_idl_sources)
 sfidl_LDADD = $(SFI_LIBS) -lm
 
-bin_PROGRAMS = bse-module-generator
-bse_module_generator_SOURCES = bse-module-generator.cc $(common_idl_sources)
-bse_module_generator_LDADD = $(SFI_LIBS) -lm
+bin_PROGRAMS = bse-plugin-generator
+bse_plugin_generator_SOURCES = bse-plugin-generator.cc $(common_idl_sources)
+bse_plugin_generator_LDADD = $(SFI_LIBS) -lm
 
 EXTRA_DIST += sfidl-generator.h sfidl-namespace.h sfidl-options.h sfidl-parser.h sfidl-module.h
 progs_extra_sources += sfidl-namespace.h
